# VulnCat

./: README.md
.github/workflows/: audit.yml  build.yml  clippy.yml  format.yml  release.yml  rust.yml  test.yml
vulncat/: .gitignore  Cargo.toml  test_cli.sh
vulncat/src/: evaluation.rs  inference.rs  lib.rs  main.rs  model.rs  preprocessing.rs  training.rs
vulncat/src/data/: mod.rs
vulncat/tests/: integration_test.rs
