[package]
name = "vulncat"
version = "0.1.0"
edition = "2024"
authors = ["Eunsoo Max Eun <naturale@hufs.ac.kr>"]

[dependencies]
clap = { version = "4.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"           # for tensor operations
ndarray-rand = "0.14"      # for random init
anyhow = "1.0"             # error handling

[dev-dependencies]
assert_cmd = "2.0"         # CLI integration tests
predicates = "2.1"         # assertions helpers
